fixed contact form but not responsive

--- a/style.css
+++ b/style.css
@@ -180,7 +180,10 @@ img {
   max-width: 400px;
   width: 100%;
   margin: 0 auto;
-  position: relative;
+	/*margin-top: 150px;*/
+	padding-top: 25vh;
+
+	text-align: center;
 }
 
 #contact input[type="text"],
@@ -189,13 +192,13 @@ img {
 #contact input[type="url"],
 #contact textarea,
 #contact button[type="submit"] {
-  font: 400 12px/16px "Roboto", Helvetica, Arial, sans-serif;
+  font: 400 12px/16px "Varela Round", Helvetica, Arial, sans-serif;
 }
 
 #contact {
-  /*background: #F9F9F9;*/
+  background: #F9F9F9;
   padding: 25px;
-  margin: 150px 0;
+  /*margin: 150px 0;*/
   box-shadow: 0 0 20px 0 rgba(0, 0, 0, 0.2), 0 5px 5px 0 rgba(0, 0, 0, 0.24);
 }
 
@@ -206,15 +209,8 @@ img {
   margin-bottom: 10px;
 }
 
-#contact h4 {
-  margin: 5px 0 15px;
-  display: block;
-  font-size: 13px;
-  font-weight: 400;
-}
-
 fieldset {
-  border: medium none !important;
+  /*border: medium none !important;*/
   margin: 0 0 10px;
   min-width: 100%;
   padding: 0;
@@ -226,7 +222,7 @@ fieldset {
 #contact input[type="tel"],
 #contact input[type="url"],
 #contact textarea {
-  width: 100%;
+  width: 94%;
   border: 1px solid #ccc;
   background: #FFF;
   margin: 0 0 5px;
@@ -272,17 +268,13 @@ fieldset {
   box-shadow: inset 0 1px 3px rgba(0, 0, 0, 0.5);
 }
 
-.copyright {
-  text-align: center;
-}
-
 #contact input:focus,
 #contact textarea:focus {
   outline: 0;
   border: 1px solid #aaa;
 }
 
-::-webkit-input-placeholder {
+/*::-webkit-input-placeholder {
   color: #888;
 }
 
@@ -296,7 +288,7 @@ fieldset {
 
 :-ms-input-placeholder {
   color: #888;
-}
+}*/
 
 @media screen and (max-width: 768px) {
   #intro h1 {
